subscriber.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cpns-subscriber
spec:
  replicas: 1
  selector:
    matchLabels:
      type: frontend
      service: cpns-subscriber
  template:
    metadata:
      labels:
        type: frontend
        service: cpns-subscriber
    spec:
      containers:
        - name: frontend
          image: vaibhavchopra/cpns-subscriber:latest
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 100m
              memory: 200Mi
            requests:
              cpu: 100m
              memory: 200Mi
          readinessProbe:
            httpGet:
              path: /subscriber
              port: 80
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /subscriber
              port: 80
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: cpns-subscriber
spec:
  ports:
    - port: 80
  selector:
    type: frontend
    service: cpns-subscriber
